syntax = "proto3";
package stride.mint.v1beta1;

option go_package = "github.com/Stride-Labs/stride/v4/x/mint/types";

import "gogoproto/gogo.proto";

// Minter represents the minting state.
message Minter {
  // current epoch provisions
  string epoch_provisions = 1 [
    (gogoproto.moretags) = "yaml:\"epoch_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// next id: 5
message DistributionProportions {
  // staking defines the proportion of the minted minted_denom that is to be
  // allocated as staking rewards.
  string staking = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"staking\"",
    (gogoproto.nullable) = false
  ];
  // community_pool defines the proportion of the minted mint_denom that is
  // to be allocated to the community pool: growth.
  string community_pool_growth = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"community_pool\"",
    (gogoproto.nullable) = false
  ];
  // community_pool defines the proportion of the minted mint_denom that is
  // to be allocated to the community pool: security budget.
  string community_pool_security_budget = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"community_pool\"",
    (gogoproto.nullable) = false
  ];
  // strategic_reserve defines the proportion of the minted mint_denom that is
  // to be allocated to the pool: strategic reserve.
  string strategic_reserve = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"community_pool\"",
    (gogoproto.nullable) = false
  ];
}

// Params holds parameters for the mint module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // type of coin to mint
  string mint_denom = 1;
  // epoch provisions from the first epoch
  string genesis_epoch_provisions = 2 [
    (gogoproto.moretags) = "yaml:\"genesis_epoch_provisions\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // mint epoch identifier
  string epoch_identifier = 3
      [ (gogoproto.moretags) = "yaml:\"epoch_identifier\"" ];
  // number of epochs take to reduce rewards
  int64 reduction_period_in_epochs = 4
      [ (gogoproto.moretags) = "yaml:\"reduction_period_in_epochs\"" ];
  // reduction multiplier to execute on each period
  string reduction_factor = 5 [
    (gogoproto.moretags) = "yaml:\"reduction_factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // distribution_proportions defines the proportion of the minted denom
  DistributionProportions distribution_proportions = 6
      [ (gogoproto.nullable) = false ];

  // start epoch to distribute minting rewards
  int64 minting_rewards_distribution_start_epoch = 7
      [ (gogoproto.moretags) =
            "yaml:\"minting_rewards_distribution_start_epoch\"" ];
}
